--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,11 +56,13 @@
         </receiver>
 
         <activity android:name=".Login.LoginActivity">
-
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <activity android:name=".View.MainActivity">
-
         </activity>
 
         <activity android:name=".Login.Sign">
@@ -70,11 +72,12 @@
         </activity>
 
         <activity android:name=".IM.IMTest">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
+
+        <activity android:name=".IM.ChatActivity" >
+        </activity>
+
     </application>
 
 </manifest>
