清单文件信息更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,6 +78,9 @@
         <activity android:name=".IM.ChatActivity" >
         </activity>
 
+        <activity android:name=".Me.UpadteActivity" >
+        </activity>
+
     </application>
 
 </manifest>
