更新清单文件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,9 @@
         <activity android:name=".Circle.SubmitCircle">
         </activity>
 
+        <activity android:name=".View.UserInfo">
+        </activity>
+
 
     </application>
 
