添加闪屏页

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
         </receiver>
 
         <activity android:name=".View.MainActivity">
+
+        </activity>
+
+        <activity android:name=".View.SaplashPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
