--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,6 +110,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".Circle.SubmitMovie">
+        </activity>
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="iNmWyvjgSgPFTrwCv0TnK1bfnRfc7ftZ" >
